# pypreprocessor

./: pyproject.toml  setup.py
src/pypreprocessor/: codec.py  install.pth  preprocessor.py
